fix: overflow issue on designer profile page

--- a/src/components/DesignerProfile/BottomPart/styles.module.scss
+++ b/src/components/DesignerProfile/BottomPart/styles.module.scss
@@ -3,6 +3,7 @@
   position: relative;
   padding-top: 100px;
   padding-bottom: 100px;
+  overflow: hidden;
 
   &.showBackground {
     background: url(/images/designer-page/web3-fashion-background.png);
